# better-mem

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  env.template  plan.md  pyproject.toml
docs/: proposition_plan.md
src/: cli.py  config.py  deps.py  main.py
src/api/: facts.py  memorize.py  profile.py  propositions.py  recall.py
src/extract/: belief_updater.py  contradiction.py  fact_extractor.py  profile_synthesizer.py  prompts.py  proposition_extractor.py  session_detector.py
src/migrations/: 001_initial.sql  002_trgm_index.sql  003_fix_profiles_unique.sql  004_propositions.sql  migrate.py
src/models/: api.py  fact.py  message.py  profile.py  proposition.py
src/retrieve/: assembler.py  prompts.py  ranker.py  searcher.py
src/services/: embedding.py  llm.py  memorize_service.py  tokenizer.py
src/store/: buffer_store.py  cache.py  database.py  fact_store.py  profile_store.py  proposition_store.py
src/worker/: scheduler.py  settings.py  tasks.py
tests/: conftest.py
tests/test_api/: test_memorize.py  test_recall.py
tests/test_extract/: test_contradiction.py  test_fact_extractor.py  test_session_detector.py
tests/test_retrieve/: test_assembler.py  test_ranker.py  test_searcher.py
tests/test_store/: test_fact_store.py
